@@ -1,4 +1,5 @@
 Changes for 1.3.10
+   Fix building for Windows
    Add support for autotools out-of-tree build
    Add press F1 for help to OBJ export options window
    Add support for exporting Inter-Quake Export (IQE) models
